--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,15 @@
               "src/assets/css/main.css"
             ],
             "scripts": [
+              "src/assets/js/jquery.min.js",
+              "src/assets/js/jquery.dropotron.min.js",
+              "src/assets/js/jquery.scrolly.min.js",
+              "src/assets/js/jquery.scrollex.min.js",
+              "src/assets/js/browser.min.js",
+              "src/assets/js/breakpoints.min.js",
+              "src/assets/js/util.js",
+              "src/assets/js/mainContact.js",
+              "src/assets/js/main.js"
             ]
           },
           "configurations": {
@@ -97,14 +106,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/js/jquery.min.js",
-              "src/assets/js/jquery.dropotron.min.js",
-              "src/assets/js/jquery.scrolly.min.js",
-              "src/assets/js/jquery.scrollex.min.js",
-              "src/assets/js/browser.min.js",
-              "src/assets/js/breakpoints.min.js",
-              "src/assets/js/util.js",
-              "src/assets/js/main.js"
+              
             ]
           }
         },
