--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,15 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/noscript.css",
               "src/assets/css/mycss.css",
               "src/assets/css/main.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/assets/js/jquery.min.js",
               "src/assets/js/jquery.dropotron.min.js",
               "src/assets/js/jquery.scrolly.min.js",
