--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@popperjs/core": "^2.5.4",
+    "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
